Updated relative path on FE Heroku processor

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
       <br>
       <br>
       <div id="btns">
-        <button id="btn1" class="startButton" data-url="https://phate-cloud-test.herokuapp.com/test_python">Start Processing On Heroku</button>
+        <button id="btn1" class="startButton" data-url="/test_python">Start Processing On Heroku</button>
         <br>
         <button id="btn2" class="startButton" data-url="http://localhost:3000/test_python">Start Processing On LocalHost</button>
       </div>
